apps/vault/statefulset-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vault
spec:
  template:
    spec:
      containers:
        - name: vault
          readinessProbe:
            tcpSocket:
              port: 8200
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 2
          livenessProbe:
            tcpSocket:
              port: 8200
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 6
