apps/vault/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "vault.matiix310.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Pod
          name: vault-0
          port: 8200
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
