apps/vault/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vault-route
spec:
  entryPoints:
    - websecure
  tls:
    secretName: vault-tls
  routes:
    - match: Host(`vault.matiix310.dev`)
      kind: Rule
      services:
        - name: vault
          port: 8200
          scheme: https
          serversTransport: traefik-vault-transport
